--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -169,12 +169,51 @@
 
 		$("#submit").on("click", function() {
 			
-			function 
-		})
+			function validateForm()  {
+					var isValid = true;
+					$(".form-control").each(function() {
+					if ( $(this).val() === "") {
+							isValid = false;
+					}
+					});
+					return isValid;
+			}
+
+			if (validateForm()) {
+
+			var userData = {
+				name: $("#name").val(),
+				photo: $("#photo").val(),
+				scores: [parseInt($("#q1").val()),
+						 parseInt($("#q2").val()),
+						 parseInt($("#q3").val()),
+						 parseInt($("#q4").val()),
+						 parseInt($("#q5").val()),
+						 parseInt($("#q6").val()),
+						 parseInt($("#q7").val()),
+						 parseInt($("#q8").val()),
+						 parseInt($("#q9").val()),
+						 parseInt($("#q10").val()) ]
+			}
+
+				console.log(userData);
+
+				var currentURL = window.location.origin;
+
+				$.post(currentURL + "/api/friends", userData, function(data) {
 
 
+						$("#matchName").text(data.name);
+						$("#matchImg").attr("src", data.photo);
 
+						$("#resultsModal").modal("toggle");
+			});
+			} else {
+					alert("Please fill out all fields before sumbitting!");
+			}
 
+		return false;
+		});
 
 
 	</script>		
