--- a/app/public/home.html
+++ b/app/public/home.html
@@ -26,7 +26,7 @@
 				<br>
 
 				<div class="">
-					<a href="/survey">
+					<a href="file:///Users/brandonpfeiffer/Documents/friend-finder/app/public/survey.html">
 						<button type="button" class="btn btn-lg btn-danger">
 							<h4><span class="glyphicon glyphicon-menu-right"></span> Go to Survey</h4>
 						</button>
@@ -37,7 +37,7 @@
 		<footer class="footer">
 			<div class="container">
 					<p>
-							<a href="/api/friends">API Friends List</a>
+							<a href="file:///Users/brandonpfeiffer/Documents/friend-finder/app/data/friend.js">API Friends List</a>
 
 							<a href="https://github.com/Brandon-Pfeiffer/friend-finder">GitHub Repo</a>
 					</p>
