--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -156,7 +156,7 @@
 		<footer class="footer">
 	<div class="container">
 					<p>
-								<a href="/api/friends">API Friends List</a>
+								<a href="file:///Users/brandonpfeiffer/Documents/friend-finder/app/data/friend.js">API Friends List</a>
 
 								<a href="https://github.com/Brandon-Pfeiffer/friend-finder">GitHub Repo</a>
 					</p>
@@ -209,7 +209,7 @@
 						$("#resultsModal").modal("toggle");
 			});
 			} else {
-					alert("Please fill out all fields before sumbitting!");
+					alert("Please fill out all fields before submitting!");
 			}
 
 		return false;
