--- a/app/public/home.html
+++ b/app/public/home.html
@@ -12,6 +12,8 @@
   		crossorigin="anonymous"></script>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 
 </head>
 <body>
@@ -19,14 +21,14 @@
 	<div class="container">
 
 			<div class="jumbotron">
-				<h1><i class="glyphicon glyphicon-send" aria-hidden="true"></i> Doggy Friend Finder</h1>
+				<h1><i class="glyphicon glyphicon-link" aria-hidden="true"></i> Doggy Friend Finder</h1>
 				<h2>Finding Man's Best Friend a Best Friend</h2>
 				<h2>Answer a few basic questions</h2>
 				<h2>Then find your dog a new friend!</h2>
 				<br>
 
 				<div class="">
-					<a href="file:///Users/brandonpfeiffer/Documents/friend-finder/app/public/survey.html">
+					<a href="/survey">
 						<button type="button" class="btn btn-lg btn-danger">
 							<h4><span class="glyphicon glyphicon-menu-right"></span> Go to Survey</h4>
 						</button>
@@ -37,7 +39,7 @@
 		<footer class="footer">
 			<div class="container">
 					<p>
-							<a href="file:///Users/brandonpfeiffer/Documents/friend-finder/app/data/friend.js">API Friends List</a>
+							<a href="api/friend.js">API Friends List</a>
 
 							<a href="https://github.com/Brandon-Pfeiffer/friend-finder">GitHub Repo</a>
 					</p>
